--- a/flower/static/css/flower.css
+++ b/flower/static/css/flower.css
@@ -8,7 +8,12 @@
     -webkit-transition: opacity 0.2s linear;
 }
 .graph .slider {
-    margin-top: 10px;
+    margin-top: 5px;
+    height: 5px;
+}
+.ui-slider .ui-slider-handle {
+    width: 10px;
+    height: 10px;
 }
 .graph .legend {
     display: inline-block;
